log
Thu, May 15, 2025  4:26:42 PM: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025  4:27:20 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
de27fc0
Thu, May 15, 2025  4:28:22 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
adcb6a9
Thu, May 15, 2025  4:29:05 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
c423d50
Thu, May 15, 2025  4:30:56 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
adec28d
Thu, May 15, 2025  4:31:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
0cbc6bd
Thu, May 15, 2025  4:33:32 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
03da37d
Thu, May 15, 2025  4:34:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
dfeb021
Thu, May 15, 2025  4:50:17 PM: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:55:30: error: 'l' undeclared (first use in this function)
             if(filas[n->sudo[l][j]] == 1) return 0;
                              ^
sudoku.c:55:30: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:51:13: error: variable 'columnas' set but not used [-Werror=unused-but-set-variable]
         int columnas[10] = {0};
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
a73b6c3
Thu, May 15, 2025  4:50:46 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:51:13: error: variable 'columnas' set but not used [-Werror=unused-but-set-variable]
         int columnas[10] = {0};
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
218a495
Thu, May 15, 2025  4:51:32 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
80e893c
Thu, May 15, 2025  4:56:29 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
0da711a
Thu, May 15, 2025  5:03:44 PM: 
 sudoku.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:11: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
       int filas[10] = {0};
           ^~~~~
cc1.exe: all warnings being treated as errors
01264ca
Thu, May 15, 2025  5:04:06 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:11: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
       int filas[10] = {0};
           ^~~~~
cc1.exe: all warnings being treated as errors
fc1b450
Thu, May 15, 2025  5:05:42 PM: 
 sudoku.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:11: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
       int filas[10] = {0};
           ^~~~~
cc1.exe: all warnings being treated as errors
dd8a9c4
Thu, May 15, 2025  5:07:25 PM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:11: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
       int filas[10] = {0};
           ^~~~~
cc1.exe: all warnings being treated as errors
5ab634b
